--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "fs": "0.0.1-security"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-portsoc": "^0.8.2",
     "nodemon": "^2.0.7"
   }
 }
