--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "setup": "npm i --prod",
     "start": "node src/server/server.mjs",
-    "devstart": "nodemon app.js"
+    "devstart": "nodemon src/server/server.mjs"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security"
@@ -15,6 +16,6 @@
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-portsoc": "^0.8.2",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.15"
   }
 }
