--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "pg": "^8.7.3",
+    "pgtools": "^0.3.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
