--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.0",
+    "express-openid-connect": "^2.7.2",
     "fs": "0.0.1-security",
     "pg": "^8.7.3",
     "pgtools": "^0.3.2"
